Changed src of weather icons from http to https in order to avoid warnings of mixed content in browsers, added -sm to col in order to get better responsive results, addes some margin at the bottom of the forecast in order to get a better layout on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@ h4 {
 .weather-forecast {
   text-align: center;
   font-weight: 400;
-  margin-bottom: 55px;
+  margin-bottom: 40px;
   font-size: 18px;
   padding: 0 50px;
 }
@@ -121,6 +121,10 @@ h4 {
 }
 .forecast-temp-high {
   font-weight: bold;
+}
+
+.col-sm {
+  margin-bottom: 20px;
 }
 
 .footnote {
